--- a/stirling/compose.yaml
+++ b/stirling/compose.yaml
@@ -11,4 +11,6 @@ services:
       - ${DIR:-/home/administrator/stirling}/logs:/logs/
     environment:
       - DOCKER_ENABLE_SECURITY=true
-      - LANGS=en_GB
+      #- LANGS=en_GB
+      - OCR_MAX_IMAGE_MPIXELS=1000
+      - PILLOW_MAX_IMAGE_PIXELS=1000000000
