Parameterize image and container name in compose.yaml

--- a/portainer/compose.yaml
+++ b/portainer/compose.yaml
@@ -1,11 +1,11 @@
 services:
   portainer:
-    image: portainer/portainer-ce:2.33
-    container_name: portainer
+    image: portainer/portainer-ce:${TAG:-latest}
+    container_name: ${CNTNR:-portainer}
     ports:
       - 9443:9443
     volumes:
-      - /home/administrator/pipeline/portainer/portainer_data:/data
+      - ${DIR:-/home/ubuntu/deploy}/portainer/portainer_data:/data
       - /var/run/docker.sock:/var/run/docker.sock
     restart: always
     networks:
