--- a/portainer/compose.yaml
+++ b/portainer/compose.yaml
@@ -1,6 +1,6 @@
 services:
   portainer:
-    image: portainer/portainer-ce:${TAG:-latest}
+    image: portainer/portainer-ce:${TAG:-2.38.0}
     container_name: ${CNTNR:-portainer}
     ports:
       - ${HOST_PORT:-9443}:9443
