--- a/portainer/compose.yaml
+++ b/portainer/compose.yaml
@@ -8,9 +8,21 @@ services:
       - ${DIR:-/home/ubuntu/deploy}/portainer/portainer_data:/data
       - /var/run/docker.sock:/var/run/docker.sock
     restart: always
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.wordpress.entrypoints=http"
+      - "traefik.http.routers.wordpress.rule=Host(`${HOST:-portainer.deploy.your-domain.com}`)"
+      - "traefik.http.middlewares.wordpress-https-redirect.redirectscheme.scheme=https"
+      - "traefik.http.routers.wordpress.middlewares=portainer-https-redirect"
+      - "traefik.http.routers.wordpress-secure.entrypoints=https"
+      - "traefik.http.routers.wordpress-secure.rule=Host(`${HOST:-portainer.deploy.your-domain.com}`)"
+      - "traefik.http.routers.wordpress-secure.tls=true"
+      - "traefik.http.routers.wordpress-secure.service=portainer"
+      - "traefik.http.services.wordpress.loadbalancer.server.port=80"
+      - "traefik.docker.network=proxy"
     networks:
-      portainer_network:
+      proxy:
 
 networks:
-  portainer_network:
+  proxy:
     external: true
