--- a/portainer/compose.yaml
+++ b/portainer/compose.yaml
@@ -10,15 +10,15 @@ services:
     restart: always
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.wordpress.entrypoints=http"
-      - "traefik.http.routers.wordpress.rule=Host(`${HOST:-portainer.deploy.your-domain.com}`)"
-      - "traefik.http.middlewares.wordpress-https-redirect.redirectscheme.scheme=https"
-      - "traefik.http.routers.wordpress.middlewares=portainer-https-redirect"
-      - "traefik.http.routers.wordpress-secure.entrypoints=https"
-      - "traefik.http.routers.wordpress-secure.rule=Host(`${HOST:-portainer.deploy.your-domain.com}`)"
-      - "traefik.http.routers.wordpress-secure.tls=true"
-      - "traefik.http.routers.wordpress-secure.service=portainer"
-      - "traefik.http.services.wordpress.loadbalancer.server.port=80"
+      - "traefik.http.routers.portainer.entrypoints=http"
+      - "traefik.http.routers.portainer.rule=Host(`${HOST:-portainer.deploy.your-domain.com}`)"
+      - "traefik.http.middlewares.portainer-https-redirect.redirectscheme.scheme=https"
+      - "traefik.http.routers.portainer.middlewares=portainer-https-redirect"
+      - "traefik.http.routers.portainer-secure.entrypoints=https"
+      - "traefik.http.routers.portainer-secure.rule=Host(`${HOST:-portainer.deploy.your-domain.com}`)"
+      - "traefik.http.routers.portainer-secure.tls=true"
+      - "traefik.http.routers.portainer-secure.service=portainer"
+      - "traefik.http.services.portainer.loadbalancer.server.port=80"
       - "traefik.docker.network=proxy"
     networks:
       proxy:
